microgateway/deployment/01-msrdemo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msrdemo-mcgw
  labels:
    app: msrdemo-mcgw
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msrdemo-mcgw
  template:
    metadata:
      labels:
        app: msrdemo-mcgw
      annotations:
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: msrdemo-sidecar
        image: staillansag/msrdemo:mcgw-0.0.7-SNAPSHOT
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/softwareag/Microgateway/files/k8s-lifenesscheck.sh
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/softwareag/Microgateway/files/k8s-readinesscheck.sh
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      - name: msrdemo-service
        image: staillansag/msrdemo:latest
